--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,7 @@
         android:autofillHints="username"
         android:ems="10"
         android:hint="@string/usernameHint"
-        android:inputType="text"
+        android:inputType="textPersonName"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"/>
 
@@ -80,7 +80,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:text="@string/buyer"/>
+            android:text="@string/buyer"
+            android:checked="true"
+            />
 
         <RadioButton
             android:id="@+id/seller"
